--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "bootstrap-dialog": "^1.34.6",
     "bootswatch": "^3.3.6",
     "font-awesome": "^4.5.0",
+    "open-sans-fontface": "^1.4.0",
     "jquery": "^2.2.2",
     "jquery-ui": "^1.10.5",
     "js-yaml": "^3.5.5",
